--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,13 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to "Sign up", new_user_registration_path %></li>
+              <% if user_signed_in? %>
+                <p class="navbar-text">Signed in as <%= current_user.email %></p>
+                <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+              <% else %>
+                <li><%= link_to "Sign up", new_user_registration_path %></li>
+                <li><%= link_to "Sign in", new_user_session_path %></li>
+              <% end %>
             </ul>
           </div>
 
