--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,47 +9,8 @@
   </head>
 
   <body>
-    <header role="banner">
-      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="icon-bar">
-              <span class="icon-bar">
-              <span class="icon-bar">
-            </button>
-            <%= link_to "Athletes Den", root_path, class: "navbar-brand" %>
-          </div>
-
-          <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li class="active"><%= link_to "Home", root_path %></li>
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-              <% if user_signed_in? %>
-                <p class="navbar-text">Signed in as <%= current_user.email %></p>
-                <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
-              <% else %>
-                <li><%= link_to "Sign up", new_user_registration_path %></li>
-                <li><%= link_to "Sign in", new_user_session_path %></li>
-              <% end %>
-            </ul>
-          </div>
-
-        </div>
-      </nav>
-    </header>
-
-    <div class="container">
-      <div class="col-md-12">
-        <% flash.each do |key, msg| %>
-          <div class="text-center alert alert-<%= key == 'notice' ? 'success' : 'danger' %>">
-            <%= msg %>
-          </div>
-        <% end %>
-      </div>
-      <%= yield %>
-    </div>
+    <%= render 'shared/header' %>
+    <%= render 'shared/main' %>
+    <%= render 'shared/footer' %>
   </body>
 </html>
