--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,6 +19,7 @@
           <% if user_signed_in? %>
             <p class="navbar-text signedin-user">Signed in as <%= current_user.email %></p>
             <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+            <li><%= link_to "My Lounge", user_exercises_path(current_user) %></li>
           <% else %>
             <li><%= link_to "Sign up", new_user_registration_path %></li>
             <li><%= link_to "Sign in", new_user_session_path %></li>
