--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,6 @@
         <div class="control-label col-md-3">
           <%= f.label :password %>
         </div>
-
         <div class="col-md-9">
           <%= f.password_field :password, class: "form-control", autocomplete: "off" %>
           <% if @minimum_password_length %>
@@ -34,6 +33,24 @@
         </div>
         <div class="col-md-9">
           <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="control-label col-md-3">
+          <%= f.label :first_name, "First Name" %>
+        </div>
+        <div class="col-md-9">
+          <%= f.text_field :first_name, class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="control-label col-md-3">
+          <%= f.label :last_name, "Last Name" %>
+        </div>
+        <div class="col-md-9">
+          <%= f.text_field :last_name, class: "form-control" %>
         </div>
       </div>
 
