--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -25,7 +25,7 @@
       </tbody>
     </table>
   <% else %>
-      <div class="alert alert-danger message-font text-center" role="alert">No Workouts Yet</div>
+      <div class="alert alert-danger message-font text-center" role="alert">There are no workouts yet.</div>
   <% end %>
   <br />
   <br />
